--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mitu’s Site</title>
+    <title>Dude MG</title>
     <style>
         body { background: #101010; color: #fff; font-family: Arial; }
         h1 { color: #00eaff; }
