--- a/index.html
+++ b/index.html
@@ -1,14 +1,114 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Dude MG</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>DudeMG – Game Developer</title>
+
     <style>
-        body { background: #101010; color: #fff; font-family: Arial; }
-        h1 { color: #00eaff; }
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #0c0c0c;
+            color: #ffffff;
+        }
+
+        header {
+            text-align: center;
+            padding: 40px 20px;
+            background: linear-gradient(90deg, #ff0054, #5500ff);
+            color: white;
+        }
+
+        h1 {
+            font-size: 3rem;
+            letter-spacing: 2px;
+        }
+
+        section {
+            padding: 40px 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        .card {
+            background: #111;
+            padding: 20px;
+            border-radius: 12px;
+            margin-bottom: 22px;
+            border: 1px solid #333;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background: #ff0054;
+            color: white;
+            border-radius: 6px;
+            text-decoration: none;
+            margin-top: 10px;
+        }
+
+        .btn:hover {
+            background: #e00049;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            margin-top: 40px;
+            background: #111;
+            color: #777;
+        }
+
+        a {
+            color: #ff0054;
+        }
     </style>
 </head>
+
 <body>
-    <h1>Welcome!</h1>
-    <p>This site was made on Android 😎</p>
+
+<header>
+    <h1>DudeMG</h1>
+    <p>Unity Game Developer | Indie Creator | Future Visionary</p>
+</header>
+
+<section>
+    <h2>👾 About</h2>
+    <div class="card">
+        <p>DudeMG is a passionate Unity game developer who has already released two games on the Play Store and is currently working on a massive upcoming project. Always leveling up skills and creating fun gameplay experiences.</p>
+    </div>
+
+    <h2>🎮 Games</h2>
+
+    <div class="card">
+        <h3>Game 1</h3>
+        <p>A Unity-powered adventure made with passion.</p>
+        <a class="btn" href="#" target="_blank">Play Store Link</a>
+    </div>
+
+    <div class="card">
+        <h3>Game 2</h3>
+        <p>Another creative project built using Unity.</p>
+        <a class="btn" href="#" target="_blank">Play Store Link</a>
+    </div>
+
+    <div class="card">
+        <h3>⚡ Upcoming Mega Project</h3>
+        <p>A huge new game currently in development. Stay tuned for teasers and updates!</p>
+    </div>
+
+    <h2>🌐 Connect</h2>
+    <div class="card">
+        <p>YouTube Channel → <a href="#" target="_blank">Open</a></p>
+        <p>Discord Server → <a href="#" target="_blank">Join</a></p>
+    </div>
+</section>
+
+<footer>
+    © 2025 DudeMG — Built with Unity & passion.
+</footer>
+
 </body>
 </html>
