--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
     <div class="card">
         <h3>Game 1</h3>
         <p>A Unity-powered adventure made with passion.</p>
-        <a class="btn" href="#" target="_blank">Play Store Link</a>
+        <a class="btn" href="https://play.google.com/store/apps/details?id=com.dudemg.roomrunnertarget="_blank">Play Store Link</a>
     </div>
 
     <div class="card">
         <h3>Game 2</h3>
         <p>Another creative project built using Unity.</p>
-        <a class="btn" href="#" target="_blank">Play Store Link</a>
+        <a class="btn" href="https://play.google.com/store/apps/details?id=com.dudemg.deadlytrackstarget="_blank">Play Store Link</a>
     </div>
 
     <div class="card">
@@ -101,8 +101,8 @@
 
     <h2>🌐 Connect</h2>
     <div class="card">
-        <p>YouTube Channel → <a href="#" target="_blank">Open</a></p>
-        <p>Discord Server → <a href="#" target="_blank">Join</a></p>
+        <p>YouTube Channel → <a href="https://youtube.com/@dudemakegames?si=a2ME8jZdUxJWhMfHtarget="_blank">Open</a></p>
+        <p>Discord Server → <a href="https://discord.gg/FSwDu55T7target="_blank">Join</a></p>
     </div>
 </section>
 
